website/websites/u64q/code/fibonacci.2.pyston.log

 Mon, 20 Sep 2021 15:00:57 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-2.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-2.pyston", line 10
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
